Bugfix for issue #2 - added z-index to resize wrapper

--- a/resizer.css
+++ b/resizer.css
@@ -36,7 +36,7 @@
 				position: fixed;
 				top: 0;
 				width: 100%;
-				z-index: 20;
+				z-index: 99998;
 			}
 			#responsive_resize_container a {
 				color: #999999;
